--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,17 +23,24 @@
   transition: transform 0.5s ease-out;
 }
 
-.parallax:hover {
-  transform: translate3d(0, -20%, 0); /* Adjust the parallax effect by changing the translation value */
-}
-
-
 body {
   color: rgb(var(--foreground-rgb));
-  /*background: linear-gradient(*/
-  /*    to bottom,*/
-  /*    transparent,*/
-  /*    rgb(var(--background-end-rgb))*/
-  /*  )*/
-  /*  rgb(var(--background-start-rgb));*/
+  overflow-x: hidden;
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 0 / var(--tw-bg-opacity));
+  z-index: -10;
 }
+
+.breathe {
+  animation: breathe 2s infinite alternate;
+}
+
+@keyframes breathe {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
